Fix sidebar bug where links are misaligned

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,5 +14,4 @@
 
 .side-links {
   font-size: .85rem;
-  display: inline;
 }
